just moved the stopwatch a bit down on mobile

--- a/src/css/_stopwatch.scss
+++ b/src/css/_stopwatch.scss
@@ -9,7 +9,7 @@
 	
 	position: absolute;
 
-	top:115px;
+	top:135px;
 	left:10px;
 
 	margin-bottom:20px;
